# face-recognition

./: .gitignore  2.5.cpp  CMakeLists.txt  FaceDetectionLite  FaceDetectionLite.cpp  FaceRecognition2  FaceRecognition3  README.md  app.py  face2.py  face_recognition  move.sh  package-lock.json  setup.sh  simple  simple.cpp  video1.py  video2.py
data/faces/: faces
face-recognition/: README.md  deploy.prototxt.txt  requirements.txt  res10_300x300_ssd_iter_140000.caffemodel
face-recognition/data/: README.md  credentials.csv
face-recognition/src/: 2.cpp  3.cpp  FaceDetection.cpp  face1.py  image_detection.py
models/: face_model.yml  knn_model.yml  label_mapping.txt  trained_embeddings.yml  yunet_120x160.onnx
src/: 1.cpp  FaceDetection.cpp  FaceDetectionLite.cpp  FaceRecognizer.cpp  FaceRecognizer.hpp  facedetection.py  facedetection_opencv.py  main_gui.cpp
